# projeto-big-data

./: README.md  analise_amvp.ipynb  dados_amvp.csv  pyproject.toml
