[tool.poetry]
name = "projeto-big-data"
version = "0.1.0"
description = ""
authors = ["Artur Santos <artursantos30.ars@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
plotly = "^5.23.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
